@@ -2,6 +2,12 @@
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  12 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge, pym/portage.py:
+  TGL's patch for correction package size when emerge -v. -- Fixed
+  use.default bug. It occurs when package in use.default exists in system
+  and it's virtual package. This should close #40831. -- Fixed trivial
+  --inject bug. This should close #41062.
+
   12 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Fixed 
   --ask bugs. It breaks with "--clean". It also breaks when blocker
   exists.  This should close #39865.
